--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ src/main/resources/data/
 .scala_dependencies
 .cache
 .cache-main
+src/main/resources/application.conf
+src/main/resources/MongoInstallation.txt
+src/main/resources/script_run.txt
